--- a/Changes
+++ b/Changes
@@ -1,4 +1,12 @@
 0.87_01
+    New Features
+    * done_testing() allows you to declare that you have finished running tests,
+      and how many you ran.  It is a safer no_plan and effectively replaces it.
+
+    Feature Changes
+    * You can now run a test without first declaring a plan.  This allows
+      done_testing() to work.
+
     Other
     * Repository moved to github.
 
