Note the Test::More home page in the README and the location of the code repo, just so it's somewhere in the docs.

--- a/README
+++ b/README
@@ -13,3 +13,7 @@ perl Makefile.PL
 make
 make test
 make install
+
+* More Info
+
+More information can be found at http://test-more.googlecode.com/
