--- a/README
+++ b/README
@@ -14,6 +14,9 @@ make
 make test
 make install
 
+It requires Perl version 5.6.0 or newer and Test::Harness 2.03 or newer.
+
+
 * More Info
 
 More information can be found at http://test-more.googlecode.com/
