--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
     New Features
     * done_testing() allows you to declare that you have finished running tests,
       and how many you ran.  It is a safer no_plan and effectively replaces it.
+    * output() now supports scalar references.
 
     Feature Changes
     * You can now run a test without first declaring a plan.  This allows
