--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-0.87_01
+0.87_01  Sun Mar 29 09:56:52 BST 2009
     New Features
     * done_testing() allows you to declare that you have finished running tests,
       and how many you ran.  It is a safer no_plan and effectively replaces it.
