* Some filesystems don't like it when you open a file for writing multiple       times.  Fixes t/Builder/reset.t. [rt.cpan.org 17298]

--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.87_02
+    Test Fixes
+    * Some filesystems don't like it when you open a file for writing multiple
+      times.  Fixes t/Builder/reset.t. [rt.cpan.org 17298]
+
 0.87_01  Sun Mar 29 09:56:52 BST 2009
     New Features
     * done_testing() allows you to declare that you have finished running tests,
