Thank Ovid for his subtest work.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.89_01
     New Features
     * subtest() allows you to run more tests in their own plan.
+      (Thanks Ovid!)
     * Test::Builder->is_passing() will let you check if the test is
       currently passing.
 
