--- a/Changes
+++ b/Changes
@@ -3,6 +3,12 @@
     * Finally added a note about the "Wide character in print" warning and
       how to work around it.
 
+    Test Fixes
+    * Small fixes for integration with the Perl core
+      [bleadperl eaa0815147e13cd4ab5b3d6ca8f26544a9f0c3b4]
+    * exit code tests could be effected by errno when PERLIO=stdio
+      [bleadperl c76230386fc5e6fba9fdbeab473abbf4f4adcbe3]
+
 
 0.88  Sat May 30 12:31:24 PDT 2009
     Turing 0.87_03 into a stable release.
