--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-0.90
+0.90  Thu Jul  2 13:18:25 PDT 2009
     Docs
     * Finally added a note about the "Wide character in print" warning and
       how to work around it.
