--- a/Changes
+++ b/Changes
@@ -1,9 +1,16 @@
+0.93_01
+    Bug Fixes
+    * Make sure that subtest works with Test:: modules which call
+      Test::Builder->new at the top of their code. (Ovid)
+
+    Other
+    * subtest() returns!
+
+
 0.92  Fri Jul  3 11:08:56 PDT 2009
     Test Fixes
     * Silence noise on VMS in exit.t (Craig Berry)
     * Skip Builder/fork_with_new_stdout.t on systems without fork (Craig Berry)
-    * Make sure that subtest works with Test:: modules which call
-      Test::Builder->new at the top of their code.
 
 
 0.90  Thu Jul  2 13:18:25 PDT 2009
