--- a/Changes
+++ b/Changes
@@ -4,11 +4,13 @@
     * Test::Builder::Tester now sets $tb->todo_output to the output handle and
       not the error handle (to be in accordance with the default behaviour of
       Test::Builder and allow for testing TODO test behaviour).
+    * Fixed file/line in failing subtest() diagnostics. (Nick Cleaton)
+    * Protect against subtests setting $Level (Nick Cleaton)
 
     New Features
     * subtests without a 'plan' or 'no_plan' have an implicit 'done_testing()'
       added to them.
-    
+
 
 0.94  Wed Sep  2 11:17:47 PDT 2009
     Releasing 0.93_01 as stable.
