--- a/Changes
+++ b/Changes
@@ -10,6 +10,8 @@
     New Features
     * subtests without a 'plan' or 'no_plan' have an implicit 'done_testing()'
       added to them.
+    * is_deeply() performance boost for large structures consisting of
+      mostly non-refs (Nick Cleaton)
 
 
 0.94  Wed Sep  2 11:17:47 PDT 2009
