--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-0.95_01
+0.95_01  Wed Mar  3 15:36:59 PST 2010
     Bug Fixes
     * is_deeply() didn't see a difference in regexes [rt.cpan.org 53469]
     * Test::Builder::Tester now sets $tb->todo_output to the output handle and
