--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.95_02
     Bug Fixes
     * Correct various typos and spelling errors
+    * Fix alignment of indented multi-line diagnostics from subtests
 
 
 0.95_01  Wed Mar  3 15:36:59 PST 2010
