--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
     Bug Fixes
     * Correct various typos and spelling errors
     * Fix alignment of indented multi-line diagnostics from subtests
+    * Fix incorrect operation when subtest called from within a todo block
 
 
 0.95_01  Wed Mar  3 15:36:59 PST 2010
