--- a/Changes
+++ b/Changes
@@ -1,9 +1,12 @@
 0.95_02
     Bug Fixes
-    * Correct various typos and spelling errors
+    * Correct various typos and spelling errors (Nick Cleaton)
     * Fix alignment of indented multi-line diagnostics from subtests
+      (Nick Cleaton)
     * Fix incorrect operation when subtest called from within a todo block
+      (Nick Cleaton)
     * Avoid spurious output after a fork within a subtest
+      (Nick Cleaton)
 
 
 0.95_01  Wed Mar  3 15:36:59 PST 2010
