--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.95_03
+    Bug Fixes
+    * You can call done_testing() again after reset() [googlecode 59]
+
+
 0.95_02  Wed May 19 15:46:52 PDT 2010
     Bug Fixes
     * Correct various typos and spelling errors (Nick Cleaton)
