Mention that TB1 is using bits of TB2

--- a/README
+++ b/README
@@ -34,6 +34,7 @@ Test event hooks
 Multiple formatters (ie. you can output something other than TAP)
 Assert stacks (ie. no more $Test::Builder::Level)
 A bunch of other stuff
+Test::Buidler is using pieces of Test::Builder2
 
 
 WHAT DOESN'T WORK
