--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+See README and version control log for Test::Builder2 changes.
+
+
 0.95_02
     Bug Fixes
     * Correct various typos and spelling errors
