Break the bogus dependency of TB1 on TB2 in the design docs

--- a/lib/Test/Builder2/Design.pod
+++ b/lib/Test/Builder2/Design.pod
@@ -406,21 +406,21 @@ only one version of TAP.
 Here's what Test::Builder2 looks like:
 
                                   .-------.
-                 .----------------| foo.t |-------------------.
-                 |                '-------'                   |
-                 |                    |                       |
-                 |                    |                       |
-                 v                    v                       v
+                 .----------------| foo.t |----------------.
+                 |                '-------'                |
+                 |                    |                    |
+                 |                    |                    |
+                 v                    v                    v
           .------------.     .----------------.     .------------------.
           | Test::More |     | Test::Whatever |     | Test::NotUpdated |
           '------------'     '----------------'     '------------------'
-                 |                    |                       |
-                 |                    v                       v
-                 |           .----------------.       .---------------.
-                 '---------->| Test::Builder2 |<------| Test::Builder |
-                             '----------------'       '---------------'
-                                      |
-                                      v
+                 |                |                       |
+                 |                v                       v
+                 |       .----------------.       .---------------.
+                 '------>| Test::Builder2 |       | Test::Builder |
+                         '----------------'       '---------------'
+                                      |                  |
+                                      v------------------.
            .--------------.    .-------------.
            | TB2::History |<---| TB2::Result |
            '--------------'    '-------------'
